<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterInfo">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:id="@+id/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/prenomtxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prenom"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/prenom"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:ems="9"
                        android:inputType="text"
                        android:layout_marginTop="10dp"
                        android:hint="@string/hint_prenom"
                        android:paddingStart="5dp"
                        tools:ignore="RtlSymmetry"
                        android:background="@drawable/box_a" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">
                    <TextView
                        android:id="@+id/nomtxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nom"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/nom"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:ems="9"
                        android:inputType="text"
                        android:layout_marginTop="10dp"
                        android:hint="@string/hint_nom"
                        android:paddingStart="5dp"
                        tools:ignore="RtlSymmetry"
                        android:background="@drawable/box_a" />

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/nationtxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nationalite"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/nation"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="9"
                    android:inputType="text"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_nation"
                    android:paddingStart="5dp"
                    tools:ignore="RtlSymmetry"
                    android:background="@drawable/box_b" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:id="@+id/dat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/datetxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:ems="9"
                        android:inputType="date"
                        android:layout_marginTop="10dp"
                        android:hint="@string/hint_date"
                        android:paddingStart="5dp"
                        tools:ignore="RtlSymmetry"
                        android:background="@drawable/box_a" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">
                    <TextView
                        android:id="@+id/sangtxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sang"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/sang"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:ems="9"
                        android:inputType="text"
                        android:layout_marginTop="10dp"
                        android:hint="@string/hint_sang"
                        android:paddingStart="5dp"
                        tools:ignore="RtlSymmetry"
                        android:background="@drawable/box_a" />

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/img"
                android:layout_margin="15dp">
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/vpwdtxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ange"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/vpwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="9"
                    android:inputType="text"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_ange"
                    android:paddingStart="5dp"
                    tools:ignore="RtlSymmetry"
                    android:background="@drawable/box_c" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:id="@+id/pays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/statetxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pays"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/state"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:ems="9"
                        android:inputType="text"
                        android:layout_marginTop="10dp"
                        android:hint="@string/hint_pays"
                        android:paddingStart="5dp"
                        tools:ignore="RtlSymmetry"
                        android:background="@drawable/box_a" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">
                    <TextView
                        android:id="@+id/citytxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ville"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/city"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:ems="9"
                        android:inputType="text"
                        android:layout_marginTop="10dp"
                        android:hint="@string/hint_ville"
                        android:paddingStart="5dp"
                        tools:ignore="RtlSymmetry"
                        android:background="@drawable/box_a" />

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:id="@+id/quartier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/qjtxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quartier"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/quart"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:ems="9"
                        android:inputType="date"
                        android:layout_marginTop="10dp"
                        android:hint="@string/hint_qj"
                        android:paddingStart="5dp"
                        tools:ignore="RtlSymmetry"
                        android:background="@drawable/box_a" />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:id="@+id/adresse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/adressetxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/adress"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/adr"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:ems="9"
                        android:inputType="date"
                        android:layout_marginTop="10dp"
                        android:hint="@string/hint_adr"
                        android:paddingStart="5dp"
                        tools:ignore="RtlSymmetry"
                        android:background="@drawable/box_b" />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ligne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/btn2"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_blanc">

                    <TextView
                        android:id="@+id/text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/textview" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btn1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/rectangle_violet">

                    <TextView
                        android:id="@+id/text1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:text="@string/save" />
                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>