<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_profile"
        android:gravity="center_vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            app:civ_border_width="2dp"
            android:id="@+id/userprofile"
            android:layout_centerHorizontal="true"
            android:src="@drawable/profile"
            android:layout_margin="5dp"
            android:layout_marginStart="15dp"
            app:civ_border_color="#ffff"
            android:layout_width="85dp"
            android:layout_height="85dp"/>

        <RelativeLayout
            android:id="@+id/upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userprofile"
            android:layout_centerHorizontal="true"
            android:background="@drawable/username"
            android:clickable="true">

            <TextView
                android:id="@+id/profil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/upload_img"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/upload"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_data"
        android:layout_marginTop="-5dp"
        android:layout_below="@+id/relativeLayout">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:layout_margin="5dp"/>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/numerotxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/num"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/numero"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:background="@drawable/box_b"
                            android:ems="19"
                            android:hint="@string/hint_num"
                            android:inputType="phone"
                            android:paddingStart="5dp"
                            tools:ignore="RtlSymmetry" />

                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/othertxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/other"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/othernum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:background="@drawable/box_b"
                            android:ems="19"
                            android:hint="@string/hint_num"
                            android:inputType="phone"
                            android:paddingStart="5dp"
                            tools:ignore="RtlSymmetry" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/pays"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/statetxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pays"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/state"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/box_a"
                            android:hint="@string/hint_pays"
                            android:inputType="text"
                            android:paddingStart="5dp"
                            tools:ignore="RtlSymmetry" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/citytxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ville"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/city"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:background="@drawable/box_a"
                            android:hint="@string/hint_ville"
                            android:inputType="text"
                            android:paddingStart="5dp"
                            tools:ignore="RtlSymmetry" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/quartier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/qjtxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/quartier"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/quart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/box_a"
                            android:hint="@string/hint_qj"
                            android:inputType="text"
                            android:paddingStart="5dp"
                            tools:ignore="RtlSymmetry" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/adresse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/adressetxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/adress"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/adr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:background="@drawable/box_b"
                            android:ems="9"
                            android:hint="@string/hint_adr"
                            android:inputType="text"
                            android:paddingStart="5dp"
                            tools:ignore="RtlSymmetry" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ligne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/btn2"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/rectangle_blanc">

                        <TextView
                            android:id="@+id/text2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="@string/annul" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/btn1"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/rectangle_violet">

                        <TextView
                            android:id="@+id/text1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/save"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </RelativeLayout>


                </LinearLayout>

            </LinearLayout>
        </ScrollView>


    </RelativeLayout>

</RelativeLayout>